@@ -11,12 +11,12 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <jetty_version>9.4.12.v20180830</jetty_version>
+        <jackson_version>2.9.8</jackson_version>
         <hapi_version>3.5.0</hapi_version>
-        <cql_engine_version>1.2.51-SNAPSHOT</cql_engine_version>
+        <cql_engine_version>1.2.54-SNAPSHOT</cql_engine_version>
         <derby_version>10.14.2.0</derby_version>
 
-        <!-- Exec plugin properties (used when starting server) -->
-        <skipTests>false</skipTests>
+        <!-- jetty plugin properties (used when starting server locally) -->
         <dev>true</dev>
         <protocolAndHost>http://localhost:8080</protocolAndHost>
         <dstu3Path>cqf-ruler/baseDstu3</dstu3Path>
@@ -47,12 +47,24 @@
             <groupId>org.opencds.cqf</groupId>
             <artifactId>cql-engine</artifactId>
             <version>${cql_engine_version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>org.opencds.cqf</groupId>
             <artifactId>cql-engine-fhir</artifactId>
             <version>${cql_engine_version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -64,13 +76,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.5</version>
+            <version>${jackson_version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.5</version>
+            <version>${jackson_version}</version>
         </dependency>
 
         <!-- This dependency includes the core HAPI-FHIR classes -->
@@ -126,14 +138,14 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.7</version>
+            <version>1.2.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.22</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>jcl-over-slf4j</artifactId>-->
+            <!--<version>1.7.22</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -191,56 +203,6 @@
             <version>${derby_version}</version>
         </dependency>
 
-        <!-- The following dependencies are only needed for automated unit tests, you do not neccesarily need them to run the example. -->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlets</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-server</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-client</artifactId>
-            <version>${jetty_version}</version>
-            <!--<scope>test</scope>-->
-        </dependency>
-
         <dependency>
             <groupId>com.phloc</groupId>
             <artifactId>phloc-schematron</artifactId>
@@ -289,7 +251,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -326,6 +288,9 @@
                     <webApp>
                         <contextPath>/cqf-ruler</contextPath>
                         <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
+                        <!-- Prevent unnecessary scanning to reduce start time -->
+                        <webInfIncludeJarPattern>^$</webInfIncludeJarPattern>
+                        <containerIncludeJarPattern>^$</containerIncludeJarPattern>
                     </webApp>
                 </configuration>
             </plugin>
@@ -380,90 +345,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!-- This is to run the integration tests -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
-                <configuration>
-                    <includes>
-                        <include>org.opencds.cqf.**</include>
-                    </includes>
-                    <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-                    <skipTests>${skipTests}</skipTests>
-                    <systemPropertyVariables>
-                        <fhir.baseurl.r4>${protocolAndHost}/${r4Path}</fhir.baseurl.r4>
-                        <fhir.baseurl.dstu3>${protocolAndHost}/${dstu3Path}</fhir.baseurl.dstu3>
-                        <fhir.baseurl.dstu2>${protocolAndHost}/${dstu2Path}</fhir.baseurl.dstu2>
-                        <testmode.local>${dev}</testmode.local>
-                    </systemPropertyVariables>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>2.20.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>exec-maven-plugin</artifactId>-->
-                <!--<version>1.5.0</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>java</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<executable>maven</executable>-->
-                    <!--<mainClass>org.opencds.cqf.CqfRulerApp</mainClass>-->
-                    <!--<arguments>-->
-                        <!--<argument>${protocolAndHost}</argument>-->
-                    <!--</arguments>-->
-                    <!--<systemProperties>-->
-                        <!--<systemProperty>-->
-                            <!--<key>fhir.baseurl.r4</key>-->
-                            <!--<value>${protocolAndHost}/${r4Path}</value>-->
-                        <!--</systemProperty>-->
-                        <!--<systemProperty>-->
-                            <!--<key>fhir.baseurl.dstu3</key>-->
-                            <!--<value>${protocolAndHost}/${dstu3Path}</value>-->
-                        <!--</systemProperty>-->
-                        <!--<systemProperty>-->
-                            <!--<key>fhir.baseurl.dstu2</key>-->
-                            <!--<value>${protocolAndHost}/${dstu2Path}</value>-->
-                        <!--</systemProperty>-->
-                        <!--<systemProperty>-->
-                            <!--<key>testmode.local</key>-->
-                            <!--<value>${dev}</value>-->
-                        <!--</systemProperty>-->
-                    <!--</systemProperties>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
